ConsultingHub/force-app/main/default/objects/Learning__c/fields/Actual_Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Spent__c</fullName>
    <label>Actual Hours Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>