ConsultingHub/force-app/main/default/objects/Learning__c/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>