ConsultingHub/force-app/main/default/objects/Learning__c/fields/Expected_Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours_to_Complete__c</fullName>
    <label>Hours Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>