ConsultingHub/force-app/main/default/objects/Learning__c/fields/Learning_Domain__c.field-meta.xml
<CustomField>
    <fullName>Learning_Domain__c</fullName>
    <label>Learning Domain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIA</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>FSL</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>