ConsultingHub/force-app/main/default/objects/Learning__c/fields/Minutes_Required__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Required__c</fullName>
    <label>Minutes Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>