ConsultingHub/force-app/main/default/objects/Learning__c/fields/Must_Complete__c.field-meta.xml
<CustomField>
    <fullName>Must_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must Complete</label>
    <type>Checkbox</type>
</CustomField>