ConsultingHub/force-app/main/default/objects/Learning__c/fields/Number_of_Domains_Associated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Domains_Associated__c</fullName>
    <label>Number of Domains Associated</label>
    <summaryForeignKey>Learning_Domain__c.Learning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>