ConsultingHub/force-app/main/default/objects/Learning__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority determines in what order the IAs are encouraged to take the trainings.</description>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>