ConsultingHub/force-app/main/default/objects/Learning__c/fields/Product_Learning_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Learning_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Learning Detail</label>
    <referenceTo>Product_Learning_Detail__c</referenceTo>
    <relationshipLabel>Learning</relationshipLabel>
    <relationshipName>Learning</relationshipName>
    <type>Lookup</type>
</CustomField>