ConsultingHub/force-app/main/default/objects/Learning__c/validationRules/Complete_Actual_Time_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Actual_Time_Field</fullName>
    <active>true</active>
    <description>To reflect actual time consumed to complete training modules</description>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;Completed&quot;) &amp;&amp;  ISBLANK( Actual_Hours_Spent__c )&amp;&amp;  NOT( ISPICKVAL( Type__c , &quot;Role Learning&quot;)|| ISPICKVAL( Type__c ,&quot;Organization Learning&quot;) )</errorConditionFormula>
    <errorMessage>Please complete the Actual Hours Spent</errorMessage>
</ValidationRule>