ConsultingHub/force-app/main/default/objects/Learning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>URL__c</columns>
    <columns>Expected_Hours_to_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>IA_Managers</group>
    </sharedTo>
</ListView>