ConsultingHub/force-app/main/default/objects/Learning__c/listViews/Employee_Name_Sales_Template_Learnings.listView-meta.xml
<ListView>
    <fullName>Employee_Name_Sales_Template_Learnings</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Hours_to_Complete__c</columns>
    <columns>Actual_Hours_Spent__c</columns>
    <filterScope>Everything</filterScope>
    <label>Employee Name MC Template Learnings</label>
</ListView>