ConsultingHub/force-app/main/default/objects/Learning__c/listViews/Leandro_Learning.listView-meta.xml
<ListView>
    <fullName>Leandro_Learning</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <columns>Expected_Hours_to_Complete__c</columns>
    <columns>Status__c</columns>
    <columns>Actual_Hours_Spent__c</columns>
    <filterScope>Mine</filterScope>
    <label>Leandro Learning</label>
</ListView>