ConsultingHub/force-app/main/default/objects/Learning__c/listViews/Master_Learnings.listView-meta.xml
<ListView>
    <fullName>Master_Learnings</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Learning_Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>Master Learnings</label>
</ListView>